--- a/main.html
+++ b/main.html
@@ -1,1 +1,32 @@
+<!DOCTYPE html>
+<meta charset="utf-8">
+<html>
 
+<head>
+<title>NFL Lineup Optimizer</title>
+</head>
+
+<body>
+
+<div id="afcLogos">
+    <img src="Patriots.png">
+    <img src="Steelers.png">
+    <img src="Broncos.png">
+    <img src="Raiders.png">
+    <img src="Chiefs.png">
+    <img src="Colts.png">
+    <img src="Ravens.png">
+    <img src="Jets.png">
+    <img src="Dolphins.png">
+    <img src="Bills.png">
+    <img src="Texans.png">
+    <img src="Browns.png">
+    <img src="Bengals.png">
+    <img src="Chargers.png">
+    <img src="Titans.png">
+    <img src="Jaguars.png">
+    </div>
+
+</body>
+
+</html>
