--- a/main.html
+++ b/main.html
@@ -9,22 +9,22 @@
 <body>
 
 <div id="afcLogos">
-    <img src="Patriots.png">
-    <img src="Steelers.png">
-    <img src="Broncos.png">
-    <img src="Raiders.png">
-    <img src="Chiefs.png">
-    <img src="Colts.png">
-    <img src="Ravens.png">
-    <img src="Jets.png">
-    <img src="Dolphins.png">
-    <img src="Bills.png">
-    <img src="Texans.png">
-    <img src="Browns.png">
-    <img src="Bengals.png">
-    <img src="Chargers.png">
-    <img src="Titans.png">
-    <img src="Jaguars.png">
+    <img src="Logos/Patriots.png">
+    <img src="Logos/Steelers.png">
+    <img src="Logos/Broncos.png">
+    <img src="Logos/Raiders.png">
+    <img src="Logos/Chiefs.png">
+    <img src="Logos/Colts.png">
+    <img src="Logos/Ravens.png">
+    <img src="Logos/Jets.png">
+    <img src="Logos/Dolphins.png">
+    <img src="Logos/Bills.png">
+    <img src="Logos/Texans.png">
+    <img src="Logos/Browns.png">
+    <img src="Logos/Bengals.png">
+    <img src="Logos/Chargers.png">
+    <img src="Logos/Titans.png">
+    <img src="Logos/Jaguars.png">
     </div>
 
 </body>
