--- a/main.html
+++ b/main.html
@@ -7,10 +7,10 @@
 </head>
 
 <body>
-    <form action="upload.php" method="post" enctype="multipart/form-data">
+    <form action="read.php" method="post" enctype="multipart/form-data">
     Select image to upload:
     <input type="file" name="fileToUpload" id="fileToUpload">
-    <input type="submit" value="Upload Image" name="submit">
+    <input type="submit" value="Upload Data" name="submit">
 </form>
 
 <div id="afcLogos">
