--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
         <input type="submit" value="Upload Image" name="submit">
     </form>
 
-<table style="width: 40%" id="lineup">
+<!--<table style="width: 40%" id="lineup">
     <tr>
        <th>Player</th>
        <th>Position</th>
@@ -25,7 +25,7 @@
        <th>Projected points</th>
     </tr>
     <tr>
-       <td>something</td>
+       <td><? = $QB[0]?></td>
        <td></td>
        <td></td>
        <td></td>
@@ -79,7 +79,7 @@
        <td></td>
     </tr>
 
-    </table>
+    </table>-->
 
 <table style = "width: 80%" id = "players">
     <tr>
