--- a/main.html
+++ b/main.html
@@ -4,106 +4,110 @@
 
 <head>
     <title>NFL Lineup Optimizer</title>
-    <link rel = "stylesheet" type="text/css" href="main.css">
+    <link rel="stylesheet" type="text/css" href="main.css">
+    <script src="jquery-3.2.1.js"></script>
+    <script src="updateDOM.js" type="text/javascript"></script>
+    <script src = "uploadfile.js" type = "text/javascript"></script>
 </head>
 
 <body>
 
-<h1>NFL Optimizer</h1>
+    <h1>NFL Optimizer</h1>
 
-     <form method="post" enctype="multipart/form-data">
+    <form id="uploadfile" action="" method="post" enctype="multipart/form-data">
         Select image to upload:
         <input type="file" name="fileToUpload" id="fileToUpload">
-        <input type="submit" value="Upload Image" name="submit">
+        <button type="submit" name="submit">Upload</button>
     </form>
+    <div id = "message"></div>
 
-<!--<table style="width: 40%" id="lineup">
-    <tr>
-       <th>Player</th>
-       <th>Position</th>
-       <th>Salary</th>
-       <th>Projected points</th>
-    </tr>
-    <tr>
-       <td><? = $QB[0]?></td>
-       <td></td>
-       <td></td>
-       <td></td>
-    </tr>
-     <tr>
-       <td></td>
-       <td></td>
-       <td></td>
-       <td></td>
-    </tr>
-     <tr>
-       <td></td>
-       <td></td>
-       <td></td>
-       <td></td>
-    </tr>
-     <tr>
-       <td></td>
-       <td></td>
-       <td></td>
-       <td></td>
-    </tr>
-     <tr>
-       <td></td>
-       <td></td>
-       <td></td>
-       <td></td>
-    </tr>
-     <tr>
-       <td></td>
-       <td></td>
-       <td></td>
-       <td></td>
-    </tr>
-     <tr>
-       <td></td>
-       <td></td>
-       <td></td>
-       <td></td>
-    </tr>
-     <tr>
-       <td></td>
-       <td></td>
-       <td></td>
-       <td></td>
-    </tr>
-     <tr>
-       <td></td>
-       <td></td>
-       <td></td>
-       <td></td>
-    </tr>
+    <table style="width: 40%" id="lineup">
+        <tr>
+            <th>Player</th>
+            <th>Position</th>
+            <th>Salary</th>
+            <th>Projected points</th>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
 
-    </table>-->
+    </table>
 
-<table style = "width: 80%" id = "players">
-    <tr>
-        <th>Include player?</th>
-        <th>First name</th>
-        <th>Last name</th>
-        <th>Position</th>
-        <th>Team</th>
-        <th>Opponent</th>
-        <th>Projection</th>
-        <th>Salary</th>
-        <th>Cost per point</th>
-    </tr>
-    <tr>
-        <button id="removeP">X</button>
+    <table style="width: 80%" id="players">
+        <tr>
+            <th>Include player?</th>
+            <th>First name</th>
+            <th>Last name</th>
+            <th>Position</th>
+            <th>Team</th>
+            <th>Opponent</th>
+            <th>Projection</th>
+            <th>Salary</th>
+            <th>Cost per point</th>
+        </tr>
+        <tr>
+            <button id="removeP">X</button>
 
-    </tr>
+        </tr>
 
     </table>
 
 
 
 
-<!--    <p></p>
+    <!--    <p></p>
     <script type="text/javascript">
     $(document).ready(function(){
         $("form").click(function(){
@@ -122,7 +126,7 @@
 </script>-->
 
 
-   <!-- <div id="afcLogos">
+    <!-- <div id="afcLogos">
         <img src="Logos/Patriots.png">
         <img src="Logos/Steelers.png">
         <img src="Logos/Broncos.png">
@@ -140,14 +144,7 @@
         <img src="Logos/Titans.png">
         <img src="Logos/Jaguars.png">
     </div>-->
-=======
-    <form action="read.php" method="post" enctype="multipart/form-data">
-    Select image to upload:
-    <input type="file" name="fileToUpload" id="fileToUpload">
-    <input type="submit" value="Upload Data" name="submit">
-</form>
-
->>>>>>> origin/master
+    ======= >>>>>>> origin/master
 
 </body>
 
