upload appears to work but doesn't show up in folder :/

--- a/main.html
+++ b/main.html
@@ -14,12 +14,12 @@
 
     <h1>NFL Optimizer</h1>
 
-    <form id="uploadfile" action="" method="post" enctype="multipart/form-data">
-        Select image to upload:
-        <input type="file" name="fileToUpload" id="fileToUpload">
-        <button type="submit" name="submit">Upload</button>
-    </form>
-    <div id = "message"></div>
+   <form>
+	<div id="drop-box">
+ 	<p>Select Files</p>
+  </div>
+	<input type="file" name="upl" id="upl" />
+</form>
 
     <table style="width: 40%" id="lineup">
         <tr>
@@ -144,7 +144,6 @@
         <img src="Logos/Titans.png">
         <img src="Logos/Jaguars.png">
     </div>-->
-    ======= >>>>>>> origin/master
 
 </body>
 
