all logos added

--- a/main.html
+++ b/main.html
@@ -7,19 +7,58 @@
     <link rel="stylesheet" type="text/css" href="main.css">
     <script src="jquery-3.2.1.js"></script>
     <script src="updateDOM.js" type="text/javascript"></script>
-    <script src = "uploadfile.js" type = "text/javascript"></script>
+    <script src="uploadfile.js" type="text/javascript"></script>
 </head>
 
 <body>
 
+    <div id="afcLogos">
+        <img src="Logos/AFC/Patriots.png">
+        <img src="Logos/AFC/Steelers.png">
+        <img src="Logos/AFC/Broncos.png">
+        <img src="Logos/AFC/Raiders.png">
+        <img src="Logos/AFC/Chiefs.png">
+        <img src="Logos/AFC/Colts.png">
+        <img src="Logos/AFC/Ravens.png">
+        <img src="Logos/AFC/Jets.png">
+        <img src="Logos/AFC/Dolphins.png">
+        <img src="Logos/AFC/Bills.png">
+        <img src="Logos/AFC/Texans.png">
+        <img src="Logos/AFC/Browns.png">
+        <img src="Logos/AFC/Bengals.png">
+        <img src="Logos/AFC/Chargers.png">
+        <img src="Logos/AFC/Titans.png">
+        <img src="Logos/AFC/Jaguars.png">
+    </div>
+
     <h1>NFL Optimizer</h1>
 
-   <form>
-	<div id="drop-box">
- 	<p>Select Files</p>
-  </div>
-	<input type="file" name="upl" id="upl" />
-</form>
+    <div id="nfcLogos">
+        <img src="Logos/NFC/49ers.png">
+        <img src="Logos/NFC/Bears.png">
+        <img src="Logos/NFC/Buccaneers.png">
+        <img src="Logos/NFC/Cardinals.png">
+        <img src="Logos/NFC/Cowboys.png">
+        <img src="Logos/NFC/Eagles.png">
+        <img src="Logos/NFC/Falcons.png">
+        <img src="Logos/NFC/Panthers.png">
+        <img src="Logos/NFC/Giants.png">
+        <img src="Logos/NFC/Lions.png">
+        <img src="Logos/NFC/Packers.png">
+        <img src="Logos/NFC/Rams.png">
+        <img src="Logos/NFC/Redskins.png">
+        <img src="Logos/NFC/Saints.png">
+        <img src="Logos/NFC/Seahawks.png">
+        <img src="Logos/NFC/Vikings.png">
+    </div>
+
+
+    <form>
+        <div id="drop-box">
+            <p>Select Files</p>
+        </div>
+        <input type="file" name="upl" id="upl" />
+    </form>
 
     <table style="width: 40%" id="lineup">
         <tr>
@@ -126,24 +165,7 @@
 </script>-->
 
 
-    <!-- <div id="afcLogos">
-        <img src="Logos/Patriots.png">
-        <img src="Logos/Steelers.png">
-        <img src="Logos/Broncos.png">
-        <img src="Logos/Raiders.png">
-        <img src="Logos/Chiefs.png">
-        <img src="Logos/Colts.png">
-        <img src="Logos/Ravens.png">
-        <img src="Logos/Jets.png">
-        <img src="Logos/Dolphins.png">
-        <img src="Logos/Bills.png">
-        <img src="Logos/Texans.png">
-        <img src="Logos/Browns.png">
-        <img src="Logos/Bengals.png">
-        <img src="Logos/Chargers.png">
-        <img src="Logos/Titans.png">
-        <img src="Logos/Jaguars.png">
-    </div>-->
+
 
 </body>
 
