--- a/main.html
+++ b/main.html
@@ -13,22 +13,41 @@
 <body>
 
     <div id="afcLogos">
-        <img src="Logos/AFC/Patriots.png">
-        <img src="Logos/AFC/Steelers.png">
-        <img src="Logos/AFC/Broncos.png">
-        <img src="Logos/AFC/Raiders.png">
-        <img src="Logos/AFC/Chiefs.png">
-        <img src="Logos/AFC/Colts.png">
-        <img src="Logos/AFC/Ravens.png">
-        <img src="Logos/AFC/Jets.png">
-        <img src="Logos/AFC/Dolphins.png">
-        <img src="Logos/AFC/Bills.png">
-        <img src="Logos/AFC/Texans.png">
-        <img src="Logos/AFC/Browns.png">
-        <img src="Logos/AFC/Bengals.png">
-        <img src="Logos/AFC/Chargers.png">
-        <img src="Logos/AFC/Titans.png">
-        <img src="Logos/AFC/Jaguars.png">
+        <a href="http://www.patriots.com/schedule-and-stats/injury-report">
+           <img src="Logos/AFC/Patriots.png">
+        </a>
+
+        <a href="http://www.steelers.com/team/injury-report.html"><img src="Logos/AFC/Steelers.png"></a>
+
+        <a href="http://www.denverbroncos.com/team/injury-report.html">
+        <img src="Logos/AFC/Broncos.png"></a>
+
+        <a href="http://www.raiders.com/team/injury-report.html">
+        <img src="Logos/AFC/Raiders.png"></a>
+        <a href="http://www.chiefs.com/team/injury-report.html">
+            <img src="Logos/AFC/Chiefs.png"></a>
+        <a href="http://www.colts.com/team/injury-report.html">
+            <img src="Logos/AFC/Colts.png"></a>
+        <a href="http://www.baltimoreravens.com/team/injury-report.html">
+            <img src="Logos/AFC/Ravens.png"></a>
+        <a href="http://www.newyorkjets.com/team/injury.html">
+            <img src="Logos/AFC/Jets.png"></a>
+        <a href="http://www.miamidolphins.com/team/injury-report.html">
+            <img src="Logos/AFC/Dolphins.png"></a>
+        <a href="http://www.buffalobills.com/team/injury-report.html">
+            <img src="Logos/AFC/Bills.png"></a>
+        <a href="http://www.houstontexans.com/team/injury-report.html">
+            <img src="Logos/AFC/Texans.png"></a>
+        <a href="http://www.clevelandbrowns.com/team/injury-report.html">
+            <img src="Logos/AFC/Browns.png"></a>
+        <a href="http://www.bengals.com/team/injuryreport.html">
+            <img src="Logos/AFC/Bengals.png"></a>
+        <a href="http://www.chargers.com/team/injury-report">
+            <img src="Logos/AFC/Chargers.png"></a>
+        <a href="http://www.titansonline.com/team/injury-report.html">
+            <img src="Logos/AFC/Titans.png"></a>
+        <a href="http://www.jaguars.com/team/injury-report.html">
+            <img src="Logos/AFC/Jaguars.png"></a>
     </div>
 
     <h1>NFL Optimizer</h1>
@@ -41,7 +60,9 @@
         <img src="Logos/NFC/Cowboys.png">
         <img src="Logos/NFC/Eagles.png">
         <img src="Logos/NFC/Falcons.png">
+        <a href="http://www.panthers.com/team/injury-report.html">
         <img src="Logos/NFC/Panthers.png">
+        </a>
         <img src="Logos/NFC/Giants.png">
         <img src="Logos/NFC/Lions.png">
         <img src="Logos/NFC/Packers.png">
