--- a/main.html
+++ b/main.html
@@ -159,6 +159,8 @@
 
     </table>
 
+    <button type = "button" id = "showdata">Display data</button>
+
     <table style="width: 80%" id="players">
         <tr>
             <th>Include player?</th>
@@ -172,11 +174,13 @@
             <th>Cost per point</th>
         </tr>
         <tr>
-            <button id="removeP">X</button>
+            <button type = "submit" id="removeP">X</button>
 
         </tr>
 
     </table>
+
+    <div id = "test"></div>
 
 
 
