trying to trigger getPlayers.php

--- a/main.html
+++ b/main.html
@@ -159,7 +159,9 @@
 
     </table>
 
-    <button type="button" id="showdata">Display data</button>
+    <button type="button" id="showdata" action = "getPlayers.php">Display data</button>
+
+    <a href="getPlayers.php">Open Script</a>
 
     <table style="width: 80%" id="players">
         <tr>
