--- a/main.html
+++ b/main.html
@@ -159,10 +159,10 @@
 
     </table>
 
-    <button type="button" id="showdata" action = "getPlayers.php">Display data</button>
+    <button type="button" id="showdata" onclick="fillData()">Display data</button>
 
-    <a href="getPlayers.php">Open Script</a>
-
+    <div id = "records"></div>
+<!--
     <table style="width: 80%" id="players">
         <tr>
             <th>Include player?</th>
@@ -181,6 +181,7 @@
         </tr>
 
     </table>
+-->
 
     <div id="test"></div>
 
