--- a/main.html
+++ b/main.html
@@ -159,6 +159,10 @@
 
     </table>
 
+    <button type="button" id="Optimize" onclick="optimize()">Optimize</button>
+
+    <div id= "Lineups"></div>
+
     <button type="button" id="showdata" onclick="fillData()">Display data</button>
 
     <div id = "records"></div>
