--- a/main.html
+++ b/main.html
@@ -8,6 +8,7 @@
     <script src="jquery-3.2.1.js"></script>
     <script src="updateDOM.js" type="text/javascript"></script>
     <script src="uploadfile.js" type="text/javascript"></script>
+    <link rel="stylesheet" type = "text/css" href="css/bootstrap.min.css">
 </head>
 
 <body>
@@ -74,15 +75,6 @@
     </div>
 
 
-    <!--
-    <form>
-        <div id="drop-box">
-            <p>Select Files</p>
-        </div>
-        <input type="file" name="upl" id="upl" />
-        <button type="submit" id="uploadbutton">Upload file</button>
-    </form>
--->
 
     <form action="#" enctype="multipart/form-data" method="post">
         <div id="drop-box">
@@ -95,114 +87,21 @@
 
     </form>
 
-    <table style="width: 40%" id="lineup">
-        <tr>
-            <th>Player</th>
-            <th>Position</th>
-            <th>Salary</th>
-            <th>Projected points</th>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-
-    </table>
 
     <button type="button" id="showdata" onclick="fillData()">Display data</button>
 
+    <button type = "button" id ="optimize" onclick="optimize()">Optimize lineups</button>
+
+    <input type = "image" id = "getNext" onclick = "getNext()" src = "forward.png"/>
+
+    <input type = "image" id = "getPrev" onclick = "getPrev()" src = "back.png"/>
+
     <div id = "records"></div>
-<!--
-    <table style="width: 80%" id="players">
-        <tr>
-            <th>Include player?</th>
-            <th>First name</th>
-            <th>Last name</th>
-            <th>Position</th>
-            <th>Team</th>
-            <th>Opponent</th>
-            <th>Projection</th>
-            <th>Salary</th>
-            <th>Cost per point</th>
-        </tr>
-        <tr>
-            <button type="submit" id="removeP">X</button>
 
-        </tr>
-
-    </table>
--->
 
     <div id="test"></div>
 
 
-    <!--    <p></p>
-    <script type="text/javascript">
-    $(document).ready(function(){
-        $("form").click(function(){
-
-            $.ajax({
-                type: 'POST',
-                url: 'upload.php',
-                success: function(data) {
-                    alert(data);
-                    $("p").text(data);
-
-                }
-            });
-   });
-});
-</script>-->
 
 
 
