--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
     <script src="jquery-3.2.1.js"></script>
     <script src="updateDOM.js" type="text/javascript"></script>
     <script src="uploadfile.js" type="text/javascript"></script>
-    <link rel="stylesheet" type = "text/css" href="css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 </head>
 
 <body>
@@ -88,19 +88,23 @@
     </form>
 
 
+    <div id="slidecontainer">
+        <input type="range" min="20" max="100" value="50" class="slider" id="exposure">
+    </div>
+
     <button type="button" id="Optimize" onclick="optimize()">Optimize</button>
 
-    <div id= "Lineups"></div>
+    <div id="Lineups"></div>
 
     <button type="button" id="showdata" onclick="fillData()">Display data</button>
 
-    <button type = "button" id ="optimize" onclick="optimize()">Optimize lineups</button>
 
-    <input type = "image" id = "getNext" onclick = "getNext()" src = "forward.png"/>
+    <input type="image" id="getPrev" onclick="getPrev()" src="back.png" />
 
-    <input type = "image" id = "getPrev" onclick = "getPrev()" src = "back.png"/>
+    <input type="image" id="getNext" onclick="getNext()" src="forward.png" />
 
-    <div id = "records"></div>
+
+    <div id="records"></div>
 
 
     <div id="test"></div>
