--- a/main.html
+++ b/main.html
@@ -8,11 +8,9 @@
     <script src="jquery-3.2.1.js"></script>
     <script src="updateDOM.js" type="text/javascript"></script>
     <script src="uploadfile.js" type="text/javascript"></script>
-<<<<<<< HEAD
-=======
+
     <link rel="stylesheet" type = "text/css" href="css/bootstrap.min.css">
 </head>
->>>>>>> b56085ccb70e244081213997d8f34d12acd1d300
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -21,7 +19,7 @@
 
 <body>
     <div class="container-fluid">
-        <div class="row">
+        <div class="row text-align-center">
             <div class="col-lg-1"></div>
             <div class="col-lg-4">
                 <div class="row" id="AFCeast">
@@ -67,7 +65,9 @@
             </div>
 
             <div class="col-lg-2">
-                <h1>Fantasy Football Lineup Optimizer</h1>
+                <div class="text-align-center">
+                    <h1 class="font-weight-bold" "text-align-center">Fantasy Football Lineup Optimizer</h1>
+                </div>
             </div>
             
             <div class="col-lg-4">
@@ -116,16 +116,22 @@
             <div class="col-lg-1"></div>
         </div> 
     </div>
-    
+
     <form action="#" enctype="multipart/form-data" method="post">
-        <div id="drop-box">
-            <p>Select files</p>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-1"></div>
+                    <div class="col-lg-2" id="drop-box">
+                        <p>Select files</p>
+                    </div>
+                <div class="col-lg-3">
+                    <label for="file_upload"></label>
+                    <input type="file" name="file_upload" id="upl" multiple>
+                </div>
+                <input class="button green" type="submit" name="submit" value="Submit Content">
+                <div class="col-lg-6"></div>
+            </div>
         </div>
-        <label for="file_upload"></label>
-        <input type="file" name="file_upload" id="upl" multiple>
-
-        <input class="button green" type="submit" name="submit" value="Submit Content">
-
     </form>
 
 
@@ -148,8 +154,11 @@
 
 
 
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+    <script
+    src="https://code.jquery.com/jquery-3.2.1.js"
+    integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
+    crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
 
 
