--- a/main.html
+++ b/main.html
@@ -15,7 +15,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-    <link href="/open-iconic-master/font/css/open-iconic-bootstrap.css" rel="stylesheet">
+<!--    <link href="/open-iconic-master/font/css/open-iconic-bootstrap.css" rel="stylesheet">-->
 </head>
 
 <body>
@@ -159,6 +159,9 @@
 
 
         </div>
+
+    <div id = "optimizestatus">
+    <p></p></div>
 
     <div class="container-fluid">
         <div class="row">
