--- a/main.html
+++ b/main.html
@@ -19,10 +19,10 @@
 </head>
 
 <body>
-    <div class="container-fluid mb-3">
+    <div class="container-fluid mb-3" style="background:transparent url('football-field-stripes-1.jpg')">
         <div class="row text-align-center">
             <div class="col-lg-1"></div>
-            <div class="col-lg-4">
+            <div >
                 <div class="row" id="AFCeast">
                     <a href="http://www.patriots.com/schedule-and-stats/injury-report">
                         <img src="Logos/AFC/Patriots.png"></a>
@@ -65,13 +65,13 @@
                 </div>
             </div>
 
-            <div class="col-lg-2">
+            <div class="col-lg-4">
                 <div class="text-align-center mx-auto">
                     <span class="px-3 mx-3 py-3 my-3"><h1 class="font-weight-bold" "text-align-center">Fantasy Football Lineup Optimizer</h1></span>
                 </div>
             </div>
 
-            <div class="col-lg-4">
+            <div >
                 <div class="row" id="NFCeast">
                     <a href="http://www.dallascowboys.com/team/injury-report.html">
                         <img src="Logos/NFC/Cowboys.png"></a>
@@ -125,10 +125,11 @@
             <div class="col-lg-6">
             <form action="#" enctype="multipart/form-data" method="post">
                 <span>Select files</span>
-                <label for="file_upload"></label>
-                <input type="file" name="file_upload" id="upl" multiple>
-
-                <input class="button green" type="submit" name="submit" value="Submit Content">
+                <span class="form-group">
+                    <label for="file_upload"></label>
+                    <input type="file" name="file_upload" id="upl" multiple>
+                    <input type="submit" class="btn btn-info"name="submit" value="Submit Content">
+                </span>
             </form>
             </div>
             <div class="col-lg-5">
@@ -168,9 +169,13 @@
         </div>
     </div>
 
-
-    <div id="records"></div>
-
+    <div class="fluid-container">
+        <div class="row">
+            <div class="col-lg-1"></div>
+            <span class="mx-3"></span><div class="table-striped" id="records"></div>
+            <div class="col-lg-1"></div>
+        </div>
+    </div>
     <div id="test"></div>
 
     <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
