--- a/main.html
+++ b/main.html
@@ -165,7 +165,7 @@
     <p></p></div>
 
     <div class="container-fluid">
-        <div class="row">
+        <div class="row" id = "toggles" style = "display: none">
             <div class="col-lg-1"></div>
                 <input type="image" id="getPrev" onclick="getPrev()" src="back.png" />
                 <input type="image" id="getNext" onclick="getNext()" src="forward.png" />
