even more ui tweaks

--- a/main.html
+++ b/main.html
@@ -15,11 +15,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-<!--    <link href="/open-iconic-master/font/css/open-iconic-bootstrap.css" rel="stylesheet">-->
+    <link href="/open-iconic-master/font/css/open-iconic-bootstrap.css" rel="stylesheet">
 </head>
 
 <body>
-    <div class="container-fluid mb-3" style="background:transparent url('football-field-stripes-1.jpg')">
+    <div class="container-fluid" style="background:transparent url('football-field-stripes-1.jpg')">
         <div class="row text-align-center">
             <div class="col-lg-1"></div>
             <div >
@@ -117,7 +117,7 @@
             <div class="col-lg-1"></div>
         </div>
     </div>
-
+    <div id="bottom-half" class="pt-3">
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-1">
@@ -160,22 +160,24 @@
 
 
         </div>
-
-    <div id = "optimizestatus">
-    <p></p></div>
+    <div>
+        <div id = "optimizestatus">
+        <p></p></div>
+    </div>
+    
 
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-1"></div>
-                <input type="image" id="getPrev" onclick="getPrev()" src="back.png" />
-                <input type="image" id="getNext" onclick="getNext()" src="forward.png" />
+            <input type="image" id="getPrev" onclick="getPrev()" src="back.png" />
+            <input type="image" id="getNext" onclick="getNext()" src="forward.png" />
         </div>
     </div>
 
-    <div class="fluid-container">
+    <div class="container-fluid">
         <div class="row">
             <div class="col-lg-1"></div>
-            <span class="mx-3"></span><div class="table-striped" id="records"></div>
+            <span class="mx-3"></span><div class="table-striped table pre-scrollable" style="min-height:10; max-height:10;" id="records"></div>
             <div class="col-lg-1"></div>
         </div>
     </div>
@@ -184,7 +186,7 @@
     <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
-
+</div>
 </body>
 
 </html>
