--- a/main.html
+++ b/main.html
@@ -65,7 +65,7 @@
                 </div>
             </div>
 
-            <div class="col-lg-4">
+            <div class="col-lg-4" id = "header">
                 <div class="text-align-center mx-auto">
                     <span class="px-3 mx-3 py-3 my-3"><h1 class="font-weight-bold" "text-align-center">Fantasy Football Lineup Optimizer</h1></span>
                 </div>
