--- a/main.html
+++ b/main.html
@@ -117,7 +117,7 @@
             <div class="col-lg-1"></div>
         </div>
     </div>
-    <div id="bottom-half" class="pt-3">
+    <div id="bottom-half" class="pt-3" style = "background: linear-gradient(#ffffff, #6c8f4b)">
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-1">
@@ -177,7 +177,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-1"></div>
-            <span class="mx-3"></span><div class="table-striped table pre-scrollable" style="min-height:10; max-height:10;" id="records"></div>
+            <span class="mx-3"></span><div class="table-striped table pre-scrollable" style="min-height:10; max-height:10;" id="records" style = "display: none"></div>
             <div class="col-lg-1"></div>
         </div>
     </div>
