--- a/main.html
+++ b/main.html
@@ -9,8 +9,8 @@
     <script src="updateDOM.js" type="text/javascript"></script>
     <script src="uploadfile.js" type="text/javascript"></script>
 
-    <link rel="icon" href="favicon.ico" type="image/x-icon" />
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="favicon.png" type="image/x-icon" />
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.png"/>
 
     <link rel="stylesheet" type="text/css" href="bootstrap.min.css">
 
